// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Radio has a helptext 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something
    </span>
    <span
      class="sr-only"
      id="radioField_fieldDetails"
    >
      Type something
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Radio has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <label
      aria-describedby="radioField_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      label
    </label>
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    <span
      class="sr-only"
      id="radioField_fieldDetails"
    >
      label
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Radio has a placeholder 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Radio has a value 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Radio has an id 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Radio is not editable 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            disabled=""
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            disabled=""
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Radio is not required 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Radio renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <label
      aria-describedby="radioField_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      text
    </label>
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    <span
      class="sr-only"
      id="radioField_fieldDetails"
    >
      text
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Radio renders no options when options is empty 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    />
    
  </div>
</div>
`;

exports[`Field Radio renders options 1`] = `
<div>
  <div
    aria-labelledby="radioField_fieldDetails"
    class="form-group hide"
    data-field-name="radioField"
    tabindex="0"
  >
    <div
      class="ddm-radio"
    >
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="item"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              label
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-radio"
      >
        <label>
          <input
            class="custom-control-input"
            name="radioField"
            role="radio"
            type="radio"
            value="item2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              label2
            </span>
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;
